--- a/style.css
+++ b/style.css
@@ -4,9 +4,19 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+:root {
+    --color-primary: #2584ff;
+    --color-secondary: #00d9ff;
+    --color-accent: #ff4d00;
+    --color-header: #;
+}
 
 html {
     font-size: 62.5%;
+}
+
+body {
+    font-size: 2rem;
 }
 
 .nav-bar ul {
@@ -22,7 +32,8 @@ ul li {
     list-style: none;
 
     padding: 0.6rem;
-    font-weight: bold;
+    margin: 0 1rem;
+    font-size: 2rem;
 }
 
 a {
@@ -43,39 +54,156 @@ a:first-child {
 .hero-container {
     background-color: rgb(15, 12, 12);
     height: 100vh;
-    padding-left: 2rem;
-    display: flex;
+    padding-left: 10rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
     justify-content: space-between;
     color: aliceblue;
     align-items: center;
+    flex-wrap: wrap;
 }
 
-h1 {
-    font-size: 6rem;
+.text-container h1 {
+    font-size: 7rem;
 
 }
 
 p {
-    font-size: 1.5em;
+    font-size: 2rem;
     color: rgb(102, 96, 96);
+    letter-spacing: 3px;
 
 }
 
 .btn {
-    background-color: orangered;
+    background-color: var(--color-accent);
     border-radius: 50px;
     border: none;
     color: aliceblue;
     padding: 10px;
     font-weight: bold;
-    width: 10rem;
-    margin-top: 1em;
+    width: 30rem;
+    margin-top: 2em;
+    font-size: 3rem;
 }
 
+img {
+    width: 48rem;
+}
 
-@media screen and (min-width: 208px) {
+.search-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 12rem;
+    margin-bottom: 10rem;
+}
+
+.search-container h1 {
+    color: var(--color-primary);
+
+}
+
+.search-bar {
+    position: relative;
+    width: 60rem;
+    margin-top: 4rem;
+}
+
+.search-bar input {
+    outline: 0;
+    width: 100%;
+    height: 7rem;
+    border-radius: 30px;
+    border: none;
+    padding-left: 2rem;
+    padding-right: 12rem;
+    /* make space for the button */
+
+    font-size: 2rem;
+    background-color: #fff;
+    box-shadow: 1px 5px 5px 5px gray;
+}
+
+.search-bar button {
+    position: absolute;
+    border-radius: 30px;
+    width: 30rem;
+    right: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 5rem;
+    padding: 0 2rem;
+    border: none;
+    background-color: var(--color-accent);
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.badges {
+    border-radius: 30px;
+    background-color: var(--color-secondary);
+    padding: 0.5rem 2rem;
+
+}
+
+.badge-container {
+    margin-top: 5rem;
+    display: flex;
+    justify-content: space-around;
+    gap: 3rem;
+}
+
+.card-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.card {
+    border: 1px solid #ccc;
+    border-radius: 30px;
+
+}
+
+.card-upper {
+    background-color: var(--color-secondary);
+    padding: 2rem 2rem;
+    height: 19rem;
+    text-align: center;
+    border-radius: 30px 30px 0 0;
+}
+
+.card button {
+    width: 20rem;
+    height: 5rem;
+    margin-top: 5px;
+    background-color: none;
+    border: 1px solid purple;
+    color: purple;
+    border-radius: 30px;
+}
+
+.card button:hover {
+    background-color: var(--color-accent);
+    color: white;
+}
+
+@media screen and (max-width: 700px) {
     html {
-        font-size: 40%;
+        font-size: 50%;
+    }
+
+    .hero-container {
+        padding-left: 2rem;
+        padding-right: 2rem;
+        grid-template-columns: 1fr;
+        align-items: center;
+
     }
 
 }
